[gd_scene load_steps=21 format=2]

[ext_resource path="res://menus/MainMenu.gd" type="Script" id=1]
[ext_resource path="res://menus/MainMenuMusic.wav" type="AudioStream" id=2]
[ext_resource path="res://menus/MainMenuBackground.png" type="Texture" id=3]

[sub_resource type="DynamicFontData" id=3]
antialiased = false
font_path = "res://globalres/joystix.ttf"

[sub_resource type="DynamicFont" id=4]
outline_color = Color( 0, 0, 0, 1 )
font_data = SubResource( 3 )

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxFlat" id=10]
bg_color = Color( 0.0156863, 0.0156863, 0.0156863, 0.67451 )
shadow_color = Color( 0.207843, 0.207843, 0.207843, 0.6 )

[sub_resource type="StyleBoxFlat" id=11]
bg_color = Color( 0, 0, 0, 0.258824 )

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.933333 )

[sub_resource type="DynamicFontData" id=6]
font_path = "res://globalres/joystix.ttf"

[sub_resource type="DynamicFont" id=7]
size = 60
font_data = SubResource( 6 )

[sub_resource type="StyleBoxLine" id=13]
content_margin_left = 0.0
content_margin_right = 0.0
content_margin_top = 0.0
content_margin_bottom = 0.0
color = Color( 1, 1, 1, 1 )
grow_begin = 0.0
grow_end = 0.0
thickness = 4

[sub_resource type="Theme" id=2]
Button/fonts/font = SubResource( 4 )
Button/styles/disabled = SubResource( 8 )
Button/styles/focus = SubResource( 9 )
Button/styles/hover = SubResource( 10 )
Button/styles/normal = SubResource( 11 )
Button/styles/pressed = SubResource( 12 )
Label/colors/font_color_shadow = Color( 0, 0, 0, 1 )
Label/colors/font_outline_modulate = Color( 0.207843, 0.207843, 0.207843, 1 )
Label/constants/shadow_offset_y = 8
Label/fonts/font = SubResource( 7 )
Label/styles/normal = SubResource( 13 )

[sub_resource type="DynamicFontData" id=18]
font_path = "res://globalres/joystix.ttf"

[sub_resource type="DynamicFont" id=19]
size = 10
font_data = SubResource( 18 )

[sub_resource type="StyleBoxFlat" id=17]
content_margin_left = 5.0
content_margin_right = 5.0
content_margin_top = 5.0
content_margin_bottom = 5.0
bg_color = Color( 0.0392157, 0.0392157, 0.0392157, 0.870588 )
corner_radius_top_left = 4
corner_radius_top_right = 4
corner_radius_bottom_right = 4
corner_radius_bottom_left = 4

[sub_resource type="Theme" id=14]
Label/fonts/font = SubResource( 19 )
Label/styles/normal = SubResource( 17 )

[sub_resource type="Animation" id=20]
resource_name = "Fadeout"
length = 2.0
tracks/0/type = "value"
tracks/0/path = NodePath("FadeEffect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ), Color( 0, 0, 0, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Music:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 2 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ 0.0, -80.0 ]
}

[sub_resource type="Animation" id=21]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("FadeEffect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Color( 1, 1, 1, 1 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Music:volume_db")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 0.0 ]
}

[node name="MainMenu" type="Control"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -320.5
margin_top = -239.5
margin_right = 320.5
margin_bottom = 239.5
theme = SubResource( 2 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="About" type="Node" parent="."]

[node name="Label" type="Label" parent="About"]
margin_left = 64.0
margin_top = 152.0
margin_right = 384.0
margin_bottom = 234.0
theme = SubResource( 14 )
text = "All assets (game, art, music, story, UI/font) 
were created by Jasper Jiale Zhou
for the MYP personal project.

Made using the Godot engine."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackgroundColor" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -328.5
margin_top = -248.0
margin_right = 328.5
margin_bottom = 248.0
color = Color( 0, 0, 0, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Background" type="TextureRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -512.0
margin_right = 512.0
margin_bottom = 512.0
rect_scale = Vector2( 0.75, 0.75 )
rect_pivot_offset = Vector2( 512, 512 )
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = 170.5
margin_top = -88.0
margin_right = 288.5
margin_bottom = -31.0
size_flags_vertical = 0
custom_constants/separation = 17
__meta__ = {
"_edit_group_": true,
"_edit_use_anchors_": false
}

[node name="Start" type="Button" parent="VBoxContainer"]
margin_right = 118.0
margin_bottom = 20.0
text = "Start"

[node name="Quit" type="Button" parent="VBoxContainer"]
margin_top = 37.0
margin_right = 118.0
margin_bottom = 57.0
text = "Quit"

[node name="Title" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.655
anchor_bottom = 0.633
margin_left = -255.5
margin_top = -174.5
margin_right = -54.855
margin_bottom = -166.207
text = "MIASMA"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Music" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 2 )
autoplay = true

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0

[node name="StartAnimation" type="AnimationPlayer" parent="."]
anims/Fadeout = SubResource( 20 )
anims/RESET = SubResource( 21 )

[node name="FadeEffect" type="CanvasModulate" parent="."]

[connection signal="button_up" from="VBoxContainer/Start" to="." method="_on_Start_button_up"]
[connection signal="button_up" from="VBoxContainer/Quit" to="." method="_on_Quit_button_up"]
[connection signal="timeout" from="StartTimer" to="." method="_on_StartTimer_timeout"]
